--- a/grid.css
+++ b/grid.css
@@ -5,7 +5,7 @@ body {
     margin: 0 auto;
     background-color: antiquewhite;
     color: #333;
-    background-image: url("/users/jcyang/assets/images/background.jpg");
+/*    background-image: url("/users/jcyang/assets/images/background.jpg");*/
     background-position: center center;
     background-attachment: fixed;
     scroll-behavior: smooth;
